# movies_tickes

./: README.md  pyproject.toml
frontend/src/pages/: Home.vue  MovieDetails.vue
movie_tickets/: hooks.py
movie_tickets/movie_tickets/doctype/movie/: movie.js  movie.json  movie.py  test_movie.py
movie_tickets/movie_tickets/doctype/movie_theater/: movie_theater.js  movie_theater.json  movie_theater.py  test_movie_theater.py
movie_tickets/movie_tickets/doctype/theater_show/: test_theater_show.py  theater_show.js  theater_show.json  theater_show.py
movie_tickets/movie_tickets/doctype/ticket_booking/: test_ticket_booking.py  ticket_booking.js  ticket_booking.json  ticket_booking.py
